tests/snapshots/structure__bin__pass__virtual_workspace_single_package_multi_target.snap
---
source: tests/structure.rs
expression: output
---
COMMAND:
structure
--bin
package_multi_target

STDERR:

STDOUT:

crate package_multi_target
└── fn main: pub(crate)
