tests/snapshots/structure__bin__pass__workspace_single_package_bin_target.snap
---
source: tests/structure.rs
expression: output
---
COMMAND:
structure
--bin
package_bin_target

STDERR:

STDOUT:

crate package_bin_target
└── fn main: pub(crate)
